name:                cryptopals
version:             0.1.0.0
synopsis:            Haskell solutions to the Cryptopals with unit and property-based tests
description:         Please see README.md
homepage:            https://github.com/palmerlao/turbo-meme/tree/master/cryptopals
license:             GPL-2
license-file:        LICENSE
author:              Palmer Lao
maintainer:          palmer.lao@gmail.com
copyright:           Palmer Lao
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src, test
  exposed-modules:     Lib
                     , Set1.Challenge1
                     , Set1.Challenge2
                     , Set1.Challenge3
                     , Set1.Challenge4
                     , Set1.Challenge5
                     , Set1.Challenge6
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
  default-language:    Haskell2010

executable cryptopals-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cryptopals
                     , bytestring
  default-language:    Haskell2010
   
test-suite cryptopals-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Set1.Challenge1.Tests
                     , Set1.Challenge2.Tests
                     , Set1.Challenge5.Tests
                     , Set1.Challenge6.Tests                     
  main-is:             Spec.hs
  build-depends:       base
                     , cryptopals
                     , HUnit
                     , QuickCheck
                     , bytestring
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/palmerlao/turbo-meme/tree/master/cryptopals
